--- a/Working-Service.html
+++ b/Working-Service.html
@@ -348,7 +348,7 @@
                               <td>12, Green Park, Surat</td>
                               <td>Jay Soni</td>
                               <td>01-03-2025</td>
-                              <td><span class="badge bg-danger">Yes</span></td>
+                              <td class="text-center"><span class="badge rounded-pill badge-info btn-xs">Yes</span></td>
                               <td class="text-center">
                                 <div class="dropdown">
                                   <button  class="btn btn-secondary btn-sm p-1"  type="button"  id="dropdownMenuButton"  data-bs-toggle="dropdown"  aria-expanded="false"  style="width: 30px; height: 30px; font-size: 20px; line-height: 1; display: flex; align-items: center; justify-content: center;">
@@ -387,7 +387,7 @@
                               <td>7, Lake View, Rajkot</td>
                               <td>Harsh Modi</td>
                               <td>02-03-2025</td>
-                              <td><span class="badge bg-success">No</span></td>
+                              <td class="text-center"><span class="badge rounded-pill badge-warning btn-xs">No</span></td>
                               <td class="text-center">
                                 <div class="dropdown">
                                   <button  class="btn btn-secondary btn-sm p-1"  type="button"  id="dropdownMenuButton"  data-bs-toggle="dropdown"  aria-expanded="false"  style="width: 30px; height: 30px; font-size: 20px; line-height: 1; display: flex; align-items: center; justify-content: center;">
@@ -426,7 +426,7 @@
                               <td>Flat 204, Sunrise Apt, Morbi</td>
                               <td>Manav Thakkar</td>
                               <td>03-03-2025</td>
-                              <td><span class="badge bg-success">No</span></td>
+                              <td class="text-center"><span class="badge rounded-pill badge-warning btn-xs">No</span></td>
                               <td class="text-center">
                                 <div class="dropdown">
                                   <button  class="btn btn-secondary btn-sm p-1"  type="button"  id="dropdownMenuButton"  data-bs-toggle="dropdown"  aria-expanded="false"  style="width: 30px; height: 30px; font-size: 20px; line-height: 1; display: flex; align-items: center; justify-content: center;">
@@ -465,7 +465,7 @@
                               <td>56, Pearl City, Ahmedabad</td>
                               <td>Ronak Mehta</td>
                               <td>04-03-2025</td>
-                              <td><span class="badge bg-danger">Yes</span></td>
+                              <td class="text-center"><span class="badge rounded-pill badge-info btn-xs">Yes</span></td>
                               <td class="text-center">
                                 <div class="dropdown">
                                   <button  class="btn btn-secondary btn-sm p-1"  type="button"  id="dropdownMenuButton"  data-bs-toggle="dropdown"  aria-expanded="false"  style="width: 30px; height: 30px; font-size: 20px; line-height: 1; display: flex; align-items: center; justify-content: center;">
@@ -504,7 +504,7 @@
                               <td>98, Riverdale Society, Vadodara</td>
                               <td>Darshan Shah</td>
                               <td>05-03-2025</td>
-                              <td><span class="badge bg-success">No</span></td>
+                              <td class="text-center"><span class="badge rounded-pill badge-warning btn-xs">No</span></td>
                               <td class="text-center">
                                 <div class="dropdown">
                                   <button  class="btn btn-secondary btn-sm p-1"  type="button"  id="dropdownMenuButton"  data-bs-toggle="dropdown"  aria-expanded="false"  style="width: 30px; height: 30px; font-size: 20px; line-height: 1; display: flex; align-items: center; justify-content: center;">
@@ -543,7 +543,7 @@
                               <td>Flat B3, Sai Residency, Bhavnagar</td>
                               <td>Chirag Vyas</td>
                               <td>06-03-2025</td>
-                              <td><span class="badge bg-success">No</span></td>
+                              <td class="text-center"><span class="badge rounded-pill badge-warning btn-xs">No</span></td>
                               <td class="text-center">
                                 <div class="dropdown">
                                   <button  class="btn btn-secondary btn-sm p-1"  type="button"  id="dropdownMenuButton"  data-bs-toggle="dropdown"  aria-expanded="false"  style="width: 30px; height: 30px; font-size: 20px; line-height: 1; display: flex; align-items: center; justify-content: center;">
@@ -582,7 +582,7 @@
                               <td>Block 4A, Amrapali, Jamnagar</td>
                               <td>Jay Soni</td>
                               <td>07-03-2025</td>
-                              <td><span class="badge bg-danger">Yes</span></td>
+                              <td class="text-center"><span class="badge rounded-pill badge-info btn-xs">Yes</span></td>
                               <td class="text-center">
                                 <div class="dropdown">
                                   <button  class="btn btn-secondary btn-sm p-1"  type="button"  id="dropdownMenuButton"  data-bs-toggle="dropdown"  aria-expanded="false"  style="width: 30px; height: 30px; font-size: 20px; line-height: 1; display: flex; align-items: center; justify-content: center;">
@@ -621,7 +621,7 @@
                               <td>1st Floor, Sun Tower, Junagadh</td>
                               <td>Ronak Mehta</td>
                               <td>08-03-2025</td>
-                              <td><span class="badge bg-success">No</span></td>
+                              <td class="text-center"><span class="badge rounded-pill badge-warning btn-xs">No</span></td>
                               <td class="text-center">
                                 <div class="dropdown">
                                   <button  class="btn btn-secondary btn-sm p-1"  type="button"  id="dropdownMenuButton"  data-bs-toggle="dropdown"  aria-expanded="false"  style="width: 30px; height: 30px; font-size: 20px; line-height: 1; display: flex; align-items: center; justify-content: center;">
@@ -660,7 +660,7 @@
                               <td>Om Plaza, Bharuch</td>
                               <td>Harsh Modi</td>
                               <td>08-03-2025</td>
-                              <td><span class="badge bg-danger">Yes</span></td>
+                              <td class="text-center"><span class="badge rounded-pill badge-info btn-xs">Yes</span></td>
                               <td class="text-center">
                                 <div class="dropdown">
                                   <button  class="btn btn-secondary btn-sm p-1"  type="button"  id="dropdownMenuButton"  data-bs-toggle="dropdown"  aria-expanded="false"  style="width: 30px; height: 30px; font-size: 20px; line-height: 1; display: flex; align-items: center; justify-content: center;">
@@ -699,7 +699,7 @@
                               <td>5B, Galaxy Heights, Vapi</td>
                               <td>Chirag Vyas</td>
                               <td>08-03-2025</td>
-                              <td><span class="badge bg-success">No</span></td>
+                              <td class="text-center"><span class="badge rounded-pill badge-warning btn-xs">No</span></td>
                               <td class="text-center">
                                 <div class="dropdown">
                                   <button  class="btn btn-secondary btn-sm p-1"  type="button"  id="dropdownMenuButton"  data-bs-toggle="dropdown"  aria-expanded="false"  style="width: 30px; height: 30px; font-size: 20px; line-height: 1; display: flex; align-items: center; justify-content: center;">
@@ -738,7 +738,7 @@
                               <td>22, Dream Valley, Mehsana</td>
                               <td>Darshan Shah</td>
                               <td>08-03-2025</td>
-                              <td><span class="badge bg-danger">Yes</span></td>
+                              <td class="text-center"><span class="badge rounded-pill badge-info btn-xs">Yes</span></td>
                               <td class="text-center">
                                 <div class="dropdown">
                                   <button  class="btn btn-secondary btn-sm p-1"  type="button"  id="dropdownMenuButton"  data-bs-toggle="dropdown"  aria-expanded="false"  style="width: 30px; height: 30px; font-size: 20px; line-height: 1; display: flex; align-items: center; justify-content: center;">
@@ -777,7 +777,7 @@
                               <td>Hill View, Palanpur</td>
                               <td>Manav Thakkar</td>
                               <td>08-03-2025</td>
-                              <td><span class="badge bg-success">No</span></td>
+                              <td class="text-center"><span class="badge rounded-pill badge-warning btn-xs">No</span></td>
                              <td class="text-center">
                                 <div class="dropdown">
                                   <button  class="btn btn-secondary btn-sm p-1"  type="button"  id="dropdownMenuButton"  data-bs-toggle="dropdown"  aria-expanded="false"  style="width: 30px; height: 30px; font-size: 20px; line-height: 1; display: flex; align-items: center; justify-content: center;">
