--- a/ComplainReport-list.html
+++ b/ComplainReport-list.html
@@ -114,7 +114,7 @@
       <!-- Page Body Start-->
       <div class="page-body-wrapper">
         <!-- Page Sidebar Start-->
-          <div class="sidebar-wrapper" data-layout="stroke-svg">
+           <div class="sidebar-wrapper" data-layout="stroke-svg">
                <div class="logo-wrapper">
                   <a href="index.html"><img class="img-fluid w-75" src="assets/images/logo/logo-unique_it.webp" alt=""></a>
                   <div class="back-btn"><i class="fa fa-angle-left"> </i></div>
@@ -172,7 +172,13 @@
                         <span class="lan-2">Plumber List</span>
                      </a>
                   </li>
-
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Manufacturer.html">
+                        <i class="fa fa-industry text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Manufacturer</span>
+                     </a>
+                  </li>
                   <li class="sidebar-list">
                      <i class="fa fa-thumb-tack"></i>
                      <a class="sidebar-link" href="Plumberreport.html">
@@ -225,26 +231,26 @@
               </div>
                <!-- Filter Button End -->
             </div>
-            <div class="row mb-2" id="filter-form">
+            <div class="row mb-2" id="filter-form" style="height: 100% !important; max-height: 100% !important;">
               <!-- Filter Form Start -->
               <div class="col-sm-12">
                 <div class="card height-equal">
                   <div class="card-body basic-wizard important-validation">
                     <div id="msform p-3">
                       <form class="stepper-one row needs-validation custom-input" novalidate=""> 
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                                     <div class="mb-1">
                                        <label class="required-validation">Start Date </label>
                                        <input class="form-control" type="date" placeholder="Start Date ">
                                     </div>
                                  </div>
-                                 <div class="col-md-4">
+                                 <div class="col-md-3">
                                     <div class="mb-1">
                                        <label class="required-validation">End Date </label>
                                        <input class="form-control" type="date" placeholder="End Date ">
                                     </div>
                                  </div>
-                                 <div class="col-md-4 position-relative">
+                                 <div class="col-md-3 position-relative">
                                     <label class="form-label" for="validationTooltip04">Years</label>
                                     <select class="form-select" id="validationTooltip04" required>
                                        <option selected disabled value="">Select an option</option>
@@ -257,7 +263,7 @@
                                     </select>
                                     <div class="invalid-tooltip">Please select a valid Years.</div>
                                  </div>
-                                 <div class="col-md-4 position-relative">
+                                 <div class="col-md-3 position-relative">
                                     <label class="form-label" for="stateSelect">Months</label>
                                     <select class="form-select" id="stateSelect" required>
                                        <option selected disabled value="">Select an option</option>
@@ -276,12 +282,78 @@
                                     </select>
                                     <div class="invalid-tooltip">Please select a valid Month.</div>
                                  </div>
-                                 <div class="col-md-4">
+                                 <div class="col-md-3">
                                     <div class="mb-1">
                                        <label class="required-validation">Select For single date</label>
                                        <input class="form-control" type="date" placeholder="Select For single date">
                                     </div>
                                  </div>
+                                 <div class="col-sm-3"> 
+                               <div class="mb-3">
+                                 <label class="required-validation">Manufacturer</label> 
+                                 <select class="form-select">
+                                   <option>Select An Option</option>
+                                   <option value="samsung">Samsung</option>
+                                   <option value="lg">LG</option>
+                                   <option value="sony">Sony</option>
+                                   <option value="panasonic">Panasonic</option>
+                                 </select>
+                               </div>
+                             </div>
+
+                             <div class="col-sm-3"> 
+                               <div class="mb-3">
+                                 <label class="required-validation">Brand</label> 
+                                 <select class="form-select">
+                                   <option>Select An Option</option>
+                                   <option value="bravia">Bravia</option>
+                                   <option value="vivobook">VivoBook</option>
+                                   <option value="inspiron">Inspiron</option>
+                                   <option value="galaxy">Galaxy</option>
+                                 </select>
+                               </div>
+                             </div>
+                             <div class="col-md-3 position-relative">
+                                 <label class="form-label" for="validationTooltip04">Problem</label>
+                                 <select class="form-select" id="validationTooltip04" required>
+                                    <option selected disabled value="">Select a Plumbing Problem...</option>
+                                    <option>Leaking Faucet</option>
+                                    <option>Low Water Pressure</option>
+                                    <option>Clogged Drain</option>
+                                    <option>Toilet Keeps Running</option>
+                                    <option>Overflow Issue</option>
+                                    <option>Concealed Tank Problem</option>
+                                    <option>Water Heater Not Working</option>
+                                    <option>Blocked Showerhead</option>
+                                    <option>Pipe Leakage</option>
+                                    <option>Improper Fittings</option>
+                                 </select>
+                                 <div class="invalid-tooltip">Please select a valid Problem.</div>
+                              </div>
+                              <div class="col-md-3 position-relative">
+                                 <label class="form-label" for="stateSelect">State</label>
+                                 <select class="form-select" id="stateSelect" required>
+                                    <option selected disabled value="">Choose a State...</option>
+                                    <option>Gujarat</option>
+                                    <option>Maharashtra</option>
+                                    <option>Rajasthan</option>
+                                    <option>Punjab</option>
+                                    <option>Delhi</option>
+                                 </select>
+                                 <div class="invalid-tooltip">Please select a valid State.</div>
+                              </div>
+                              <div class="col-md-3 position-relative">
+                                 <label class="form-label" for="citySelect">City</label>
+                                 <select class="form-select" id="citySelect" required>
+                                    <option selected disabled value="">Choose a City...</option>
+                                    <option>Ahmedabad</option>
+                                    <option>Rajkot</option>
+                                    <option>Mumbai</option>
+                                    <option>Jaipur</option>
+                                    <option>Chandigarh</option>
+                                 </select>
+                                 <div class="invalid-tooltip">Please select a valid City.</div>
+                              </div>
                         <div class="wizard-footer d-flex justify-content-end gap-2 col-lg-12 col-md-12 col-sm-12 mt-3">
                           <button class="btn btn-primary" id="backbtn" type="submit">Search</button>
                           <button class="btn btn-danger" id="nextbtn" type="Clear">Clear</button>
