--- a/ComplainStatus.html
+++ b/ComplainStatus.html
@@ -114,7 +114,7 @@
       <!-- Page Body Start-->
       <div class="page-body-wrapper">
         <!-- Page Sidebar Start-->
-          <div class="sidebar-wrapper" data-layout="stroke-svg">
+           <div class="sidebar-wrapper" data-layout="stroke-svg">
                <div class="logo-wrapper">
                   <a href="index.html"><img class="img-fluid w-75" src="assets/images/logo/logo-unique_it.webp" alt=""></a>
                   <div class="back-btn"><i class="fa fa-angle-left"> </i></div>
@@ -172,7 +172,13 @@
                         <span class="lan-2">Plumber List</span>
                      </a>
                   </li>
-
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Manufacturer.html">
+                        <i class="fa fa-industry text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Manufacturer</span>
+                     </a>
+                  </li>
                   <li class="sidebar-list">
                      <i class="fa fa-thumb-tack"></i>
                      <a class="sidebar-link" href="Plumberreport.html">
