--- a/Plumber-add.html
+++ b/Plumber-add.html
@@ -171,7 +171,13 @@
                         <span class="lan-2">Plumber List</span>
                      </a>
                   </li>
-
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Manufacturer.html">
+                        <i class="fa fa-industry text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Manufacturer</span>
+                     </a>
+                  </li>
                   <li class="sidebar-list">
                      <i class="fa fa-thumb-tack"></i>
                      <a class="sidebar-link" href="Plumberreport.html">
@@ -247,6 +253,12 @@
                           <div class="mb-3">
                             <label class="required-validation">Ammount</label>
                             <input class="form-control" type="number" placeholder="Ammount">
+                          </div>
+                        </div>
+                        <div class="col-sm-6">
+                          <div class="mb-3">
+                            <label class="required-validation">Ammount of Extra Sheets</label>
+                            <input class="form-control" type="number" placeholder="Number">
                           </div>
                         </div>
                         <div class="col-sm-6">
