--- a/Manufacturer.html
+++ b/Manufacturer.html
@@ -324,14 +324,14 @@
                                 <form class="row g-3 needs-validation" novalidate="">
                                   <div class="col-12">
                                   <div class="card-wrapper border rounded-3 light-card checkbox-checked mt-3">
-                                    <h4>Select Randoms</h4>
+                                    <h4>Add Brand</h4>
                                     <div class="row mt-3">
-                                        <div class="col-sm-12"> 
-                                            <label class="form-label" for="formFile1">Choose Random Image<span
-                                              class="txt-danger">*</span></label>
-                                            <input class="form-control" id="formFile1" type="file" aria-label="file example" required="">
-                                            <div class="invalid-feedback">Invalid form file selected</div>
+                                        <div class="col-sm-12">
+                                          <div class="mb-3">
+                                            <label class="required-validation">Brand Name</label>
+                                            <input class="form-control" type="text" placeholder="Name">
                                           </div>
+                                        </div>
                                           <div class="col-md-12">
                                             <div class="mb-3 mt-3">
                                               <label>Description</label>
@@ -340,7 +340,7 @@
                                           </div>
                                           <div class="col-sm-12">
                                             <div class="d-flex justify-content-end align-items-center mt-1">
-                                                <div class="btn-showcase text-start"> <a href="finish-add.html">
+                                                <div class="btn-showcase text-start"> <a href="#">
                                                     <button class="btn btn-pill btn-outline-danger-2x b-r-8" type="button">Add</button></a></div>
                                               </div>
                                           </div>
@@ -357,7 +357,7 @@
                                                           <thead>
                                                             <tr class="bg-light text-dark">
                                                               <th class="text-center">No.</th>
-                                                              <th class="text-center">Img</th>
+                                                              <th class="text-center">Brand Name</th>
                                                               <th class="text-center">Description</th> 
                                                               <th class="text-center">Action</th>
                                                             </tr>
@@ -365,7 +365,7 @@
                                                           <tbody>
                                                             <tr>
                                                               <td class="text-center table-data">1</td>
-                                                              <td class="text-center table-data"><img src="assets/images/demo img.avif" width="70px" height="70px" alt=""></td>
+                                                              <td class="text-center table-data">abc</td>
                                                               <td class="text-center table-data">6</td>
                                                               <td class="d-flex justify-content-center"> 
                                                                 <ul class="action"> 
@@ -376,7 +376,7 @@
                                                             </tr>
                                                             <tr>
                                                               <td class="text-center table-data">2</td>
-                                                              <td class="text-center table-data"><img src="assets/images/demo 2.jpg" width="70px" height="70px" alt=""></td>
+                                                              <td class="text-center table-data">asd</td>
                                                               <td class="text-center table-data">6</td>
                                                               <td class="d-flex justify-content-center"> 
                                                                 <ul class="action"> 
